--- a/index.html
+++ b/index.html
@@ -1,65 +1,81 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
   </head>
+
   <body ng-app="directoryApp">
     <div class="container">
+
       <div class="row">
         <h1>UF Directory App</h1>
       </div>
+
       <div class="row" ng-controller="ListingsController">
+
         <div class="col-md-6">
+
           <div class="input-group" id="searchBar">
-            <!-- 
-
-                Implement a way to filter through listings using the search bar 
-
-              -->
+            <!-- Implement a way to filter through listings using the search bar -->
             <span class="input-group-addon" id="sizing-addon1"><span class="glyphicon glyphicon-search"></span></span>
-            <input type="text" class="form-control" placeholder="Search">
+            <input type="text" class="form-control" placeholder="Search" ng-model="searchListing">
           </div>
+
           <div class="tableWrapper">
             <table class="table table-striped table-hover">
+
               <tr>
                 <th>Code</th>
                 <th>Building Name</th>
                 <th></th>
               </tr>
-              <!-- 
 
-                  Fill in the rest of the table:
-                      * populate the rows with the code and name of each listing
-                      * include a way to remove individual listings
+              <!-- Fill in the rest of the table -->
+              <tr ng-repeat="entries in listings | filter:searchListing | orderBy:'code'" ng-click="showDetails(listings.indexOf(entries))">
+                <!-- <th></th> -->
+                <!-- * populate the rows with the code and name of each listing -->
+                <th>{{ entries.code }}</th>
+                <th>{{ entries.name }}</th>
+                <!-- * include a way to remove individual listings -->
+                <th><button type="button" class="btn btn-outline" ng-click="deleteListing(listings.indexOf(entries))"><span class="glyphicon glyphicon-trash"></span></button></th>
+              </tr>
 
-                --> 
             </table>
           </div>
-          <!-- 
 
-              Write an HTML form that adds new listings to the directory 
+          <!-- Write an HTML form that adds new listings to the directory -->
+          <form class="" ng-submit="addListing()">
+            Code: <input type="text" name="" value="" ng-model="code"> <br>
+            Building Name: <input type="text" name="" value="" ng-model="name"> <br>
+            <input class="btn btn-outline" type="submit" name="" value="Add">
+          </form>
 
-            -->
         </div>
+
         <div class="col-md-6">
           <div class="jumbotron">
             <h2>Detailed Information</h2>
-            <!-- 
-
-              Include a way to display detailed information about an individual listing:
-                   * consider how to use ng-click within the the table to implement this feature
-
-             -->
+            <!-- Include a way to display detailed information about an individual listing:
+                 * consider how to use ng-click within the the table to implement this feature -->
+              <span ng-show="detailedInfo.code"><b>Code:</b> {{ detailedInfo.code }}</span><br>
+              <span ng-show="detailedInfo.name"><b>Name:</b> {{ detailedInfo.name }}</span><br>
+              <span ng-show="detailedInfo.coordinates.latitude"><b>Latitude:</b> {{ detailedInfo.coordinates.latitude }}</span><br>
+              <span ng-show="detailedInfo.coordinates.longitude"><b>Longitude:</b> {{ detailedInfo.coordinates.longitude }}</span><br>
+              <span ng-show="detailedInfo.address"><b>Address:</b> {{ detailedInfo.address }}</span><br>
           </div>
         </div>
+
       </div>
     </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
     <script src="https://code.angularjs.org/1.4.3/angular.js"></script>
     <script src="app.js"></script>
     <script src="listingController.js"></script>
     <script src="listingFactory.js"></script>
+
   </body>
 </html>
