--- a/client/index.html
+++ b/client/index.html
@@ -15,9 +15,9 @@
           <!-- Add a ui-sref property to the anchor tags to allow navigation between different states -->
           <nav>
             <ul class="nav nav-pills">
-              <li><a>List View</a></li>
-              <li><a>Map View</a></li>
-              <li><a>Create New Listing</a></li>
+              <li ui-sref="listings.list"><a>List View</a></li>
+              <li ui-sref="listings.map"><a>Map View</a></li>
+              <li ui-sref="listings.create"><a>Create New Listing</a></li>
             </ul>
           </nav>
         </div>
@@ -25,12 +25,24 @@
       <div ui-view></div>
     </div>
     <!-- Dependencies -->
-    <script src="/public/lib/jquery/dist/jquery.min.js"></script
+    <script src="/public/lib/jquery/dist/jquery.min.js"></script>
     <script src="/public/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/public/lib/angular/angular.js"></script>
     <script src="/public/lib/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="/public/lib/angular-bootstrap/ui-bootstrap.js"></script>
-    <script src="/public/lib/lodash/dist/lodash.min.js"></script>
+
+    <!--
+      The bower.JSON file installed the lastest version of lodash which is
+      Version 4
+
+      In version 4 lodash replaced _.contains w/ _.includes
+
+      This resulted in errors, so I had to install the latest 3.X version
+      which was 3.10.1
+
+      bower install lodash@3.10.1
+    -->
+    <script src="/public/lib/lodash/lodash.min.js"></script>
     <script src="/public/lib/angular-simple-logger/dist/angular-simple-logger.min.js"></script>
     <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
     <script src="/public/lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
